styles.css
* {
  box-sizing: border-box;
}

:root {
  --txt-clr: black;
  --bg-clr: white;
  --input-bdr-clr-def: lightgray;
  --input-bdr-clr-foc: #0969da;
  --input-bg-clr: white;
  --sbmt-btn-clr: white;
  --smbt-btn-bg-clr: #0969da;
  --cancel-btn-bg-clr: red;
}

body {
  margin: 0;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  color: var(--txt-clr);
  background-color: var(--bg-clr);
  padding: 2em;
}

form {
  display: none;
  position: absolute;
  top: calc((100vh - 340px) / 2);
  left: max(15px, calc((100vw - 320px) / 2));
  max-width: 90vw;
  z-index: 1;
}

/* form control resets */
button,
input,
select {
  font-family: inherit;
  font-size: 100%;
  width: 150px;
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

fieldset {
  border-radius: 0.5em;
  padding: 1em;
  position: relative;
}

legend {
  font-size: 1.125rem;
}

.form-control + .form-control {
  margin-top: 1em;
}

label {
  display: block;
  cursor: pointer;
}

label:last-of-type {
  display: inline-block;
}

input {
  border-radius: 5px;
  border: 1.5px solid var(--input-bdr-clr-def);
  padding: 0.25em 1em 0.25em 0.25em;
  outline: none;
  margin-right: auto;
  width: min(100%, 300px);
  background-color: var(--input-bg-clr);
  color: var(--txt-clr);
}

input[type='checkbox'] {
  width: max-content;
  margin-left: 0.5em;
  cursor: pointer;
}

input:focus {
  border-color: var(--input-bdr-clr-foc);
}

button[type='submit'] {
  font-size: 1rem;
  cursor: pointer;
  border: none;
  padding: 0.5em 0.25em;
  border-radius: 1.5em;
  color: white;
  background-color: var(--smbt-btn-bg-clr);
  max-width: 40%;
}

.cancel {
  font-size: 1rem;
  cursor: pointer;
  border: none;
  padding: 0.5em;
  border-radius: 1.5em;
  color: white;
  background-color: var(--cancel-btn-bg-clr);
  max-width: 30%;
}

.library {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
  gap: 1em;
}

.book {
  border-radius: 0.5em;
  border-left: 10px solid black;
  padding: 0.5em;
  cursor: pointer;
  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
  position: relative;
}

.book.read {
  border-left-color: green;
}

.title {
  font-weight: bold;
}

.author {
  opacity: 0.7;
}

.pages::before {
  content: '📄 ';
}

.delete {
  width: max-content;
  position: absolute;
  top: 0;
  right: 0;
}

.delete:hover {
  background-color: red;
  border-radius: 1em;
}

.add {
  border-radius: 1em;
  border: none;
  padding: 1em;
  cursor: pointer;
  margin: 0 auto 1.5em;
  color: var(--txt-clr);
  background-color: var(--input-bg-clr);
  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
}

@media screen and (min-width: 768px) {
  fieldset {
    width: max-content;
  }
  h1,
  .add {
    display: inline-block;
  }

  .add {
    margin: 1em;
  }

  .library {
    margin: 2em;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    --txt-clr: white;
    --bg-clr: #181a1b;
    --input-bg-clr: #242729;
    --input-bdr-clr-def: #242729;
    --sbmt-btn-clr: black;
  }
}

